overflow fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,7 @@ body {
 .container {
   max-width: 1200px;
   margin: auto;
+  overflow: hidden;
   padding: 0 2rem; }
   @media only screen and (max-width: 500px) {
     .container {
@@ -251,6 +252,7 @@ li {
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
+  z-index: 1000;
   position: sticky;
   position: -webkit-sticky;
   top: 100px;
@@ -299,10 +301,28 @@ li {
   font-weight: 400;
   color: #fff; }
 
-.movie_info {
-  padding: 0 1rem; }
-  .movie_info * {
-    line-height: 1.5; }
+@media only screen and (max-width: 870px) {
+  .movie_info_section1 {
+    margin-top: 10rem;
+    background-color: #1b1b1b;
+    padding: 3rem 3rem 3rem 4rem; } }
+
+.movie_info * {
+  line-height: 1.5; }
+
+.cast {
+  position: relative;
+  top: 0;
+  padding: 3rem 3rem 3rem 4rem;
+  background-color: #1b1b1b;
+  margin-top: 20rem; }
+  .cast_image {
+    position: absolute;
+    top: -100px;
+    right: 3rem;
+    width: 40%;
+    height: 25rem;
+    object-fit: cover; }
 
 @media only screen and (max-width: 870px) {
   .shrink {
@@ -543,7 +563,8 @@ li {
     transform: translate(-50%, -50%); } }
 
 .heading {
-  font-weight: 800; }
+  font-weight: 800;
+  text-transform: uppercase; }
 
 .container_sub {
   padding: 0 2rem;
@@ -553,6 +574,11 @@ li {
     .container_sub {
       margin: 0 auto;
       padding: 0rem; } }
+
+.overlay_text {
+  font-size: 20vw;
+  color: #141414;
+  font-weight: 800; }
 
 .contentsection {
   width: 100%;
