--- a/public/scss/_helper.scss
+++ b/public/scss/_helper.scss
@@ -80,16 +80,24 @@
 
 .heading {
   font-weight: 800;
+  text-transform: uppercase;
 }
 
 .container_sub {
   padding: 0 2rem;
   margin: auto;
+
   max-width: 1200px;
   @media only screen and (max-width: $tablet-breakpoint) {
     margin: 0 auto;
     padding: 0rem;
   }
+}
+
+.overlay_text {
+  font-size: 20vw;
+  color: rgb(20, 20, 20);
+  font-weight: 800;
 }
 
 // .is-transitioning {
