--- a/public/scss/_movieDetail.scss
+++ b/public/scss/_movieDetail.scss
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
+  z-index: 1000;
   position: sticky;
   position: -webkit-sticky;
   top: 100px;
@@ -111,14 +112,37 @@
 }
 
 .movie_info {
-  padding: 0 1rem;
+  // padding: 0 1rem;
 
   &_section1 {
     // display: flex;
+
+    @media only screen and (max-width: $tablet-breakpoint) {
+      margin-top: 10rem;
+      background-color: $black;
+      padding: 3rem 3rem 3rem 4rem;
+    }
   }
 
   * {
     line-height: 1.5;
+  }
+}
+
+.cast {
+  position: relative;
+  top: 0;
+  padding: 3rem 3rem 3rem 4rem;
+  background-color: $black;
+  margin-top: 20rem;
+  &_image {
+    position: absolute;
+    top: -100px;
+    right: 3rem;
+    width: 40%;
+    height: 25rem;
+
+    object-fit: cover;
   }
 }
 
